# cool-logging-pkg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cool_logging/: cool-logging.py  logging.py
examples/: example_usage.py
