[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "cool-logging"
version = "0.0.1"
authors = [
  { name="Cooper Wallace", email="cooper@lariatlabs.dev" },
]
description = "A cool logging library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coopdloop/cool-logging-pkg"
"Bug Tracker" = "https://github.com/coopdloop/cool-logging-pkg/issues"

